<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Discover Gurbani</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_search">Discover Gurbani</string>
    <string name="title_activity_shabad">Shabad</string>
    <string name="title_activity_main_settings">Settings</string>
    <string name="title_activity_about_page">About</string>
    <string name="title_activity_raag_list">Raags</string>
    <string name="title_activity_raag_detail">Raag Info</string>

    <string name="search_hint_english">Enter a query</string>
    <string name="search_hint_gurmukhi">ਸੇਰਚ ਗੁਰਬਾਣੀ</string>

    <string name="menu_label_settings">Settings</string>
    <string name="menu_label_reset">Reset Display</string>
    <string name="menu_label_display_options">Display</string>
    <string name="menu_label_previous_button">Prev</string>
    <string name="menu_label_next_button">Next</string>
    <string name="menu_label_laridaar">Laridaar</string>
    <string name="menu_label_audio_start">Play Audio</string>
    <string name="menu_label_audio_stop">Stop</string>
    <string name="menu_label_audio_pause">Pause</string>

    <string name="pref_category_display">Display</string>
    <string name="pref_category_network">Network</string>
    <string name="pref_category_search">Search</string>
    <string name="pref_wake_display">Keep Display On</string>
    <string name="pref_wake_display_summ">Prevent the display from falling asleep while reading Gurbani</string>
    <string name="pref_auto_search">Auto Search</string>
    <string name="pref_auto_search_summ">Start searching as you type</string>
    <string name="pref_wifi_only">Wifi Only</string>
    <string name="pref_wifi_only_summ">Only use a Wi-Fi connection to load shabads</string>

    <string name="gurmukhiToggleLabel">ਅ</string>
    <string name="translationToggleLabel">A</string>
    <string name="transliterationToggleLabel">\u0101</string>

    <string name="increaseFontSizeLabel">+</string>
    <string name="decreaseFontSizeLabel">-</string>

    <string name="angNumberLabel">Ang (optional)</string>
    <string name="searchModeLabel">Search Mode</string>
    <string name="transliterationLabel">Transliteration</string>
    <string name="translationLabel">Translation</string>
    <string name="transliterationLabelAlt">Transliteration (Script)</string>
    <string name="translationLabelAlt">Translation (Language)</string>

    <string-array name="search_modes">
        <item name="0">1st Letter, Start</item>
        <item name="1">1st Letter, Any</item>
        <item name="2">Word, Any</item>
        <item name="3">Word, Translation</item>
        <item name="4">Word, Transliteration</item>
        <item name="5">Ang</item>
    </string-array>

    <string name="title_section1">About</string>
    <string name="title_section2">Read</string>
    <string name="title_section3">Search</string>
    <string name="title_section4">Discover</string>

    <string name="about_page_text">
        ਗੁਰਬਾਣੀ ਇਸੁ ਜਗ ਮਹਿ ਚਾਨਣੁ ਕਰਮਿ ਵਸੈ ਮਨਿ ਆਏ ॥੧॥\n\nGurbani is the light to illuminate this world; By the grace of the King of Kings, it comes to abide within the mind. ||1|| - Guru Amar Das Ji\n\nDiscover Gurbani is a search engine for the Sikh Scriptures, Guru Granth Sahib Ji. They contain the writings of the Sikh Gurus, as well as other enlightened Saints of different faiths and backgrounds. The Gurus gave these writings supreme status in Sikhi and Sikhs now regard Guru Granth Sahib Ji as the eternal, living Guru - the words aren’t just words but are the living embodiment of the Gurus very spirit and soul.\n\nThe writings, collectively referred to as Gurbani, contain the Gurus wisdom and were compiled and sealed by the Guru themselves. Gurbani is very unique among the various scriptures of the world. It isn’t just a description of the path to enlightenment, but it is the path in itself. One example is everything is written in poetic measure and assigned various musical scales and rhythms - it is not just meant to be read, but sung.\n\nWith the Guru’s blessing, this app aims to allow anyone, regardless of their background or belief, to discover and experience the Guru’s wisdom. The user can read Gurbani in their native language’s script through transliterations, listen to the recitation, and understand what they’re read with translations of the same language.\n\n**No translation of Gurbani can ever be complete as we are flawed by interpretation, and oftentimes limited by the constraints of scripts, alphabets and languages. With translations, poetic measure is usually also lost. Therefore, anyone wishing to understand Gurbani should aim to eventually learn the Gurmukhi script and correct pronunciation. However, languages can sometimes become barriers; this is an attempt to ease the learning process for those new to Gurbani.\n\n***Dhan Siri Guru Granth Sahib Ji maharaj is Jagat Guru, meaning they are accessible to everyone, not just Punjabi-speaking Sikhs; people of all walks of life can take the wisdom in these shabads and apply it to their lives. Guru Sahib tells us themselves: Gurbani is the light for entire  world to behold. In our history, great Gursukhs like Baba Deep Singh Ji used to have translations of Maharaj’s saroop prepared and sent to different parts of the world, for the masses to be able to receive the Guru’s wisdom. However today, Gurbani isn’t very accessible to much of the world’s population that isn’t fluent in Punjabi or English. We should strive to learn Gurmukhi and shud uchaaran of Gurbani to fully experience the gurshabad, but it shouldn’t be a barrier for anyone to discover the beauty of Gurbani. That being said, several translations have been temporarily disabled until their accuracy can be verified. Sevadaars are grateful to the Sikher team for their work in curating the data used in this application.
    </string>

    <string name="read_page_text">
        When Siri Guru Granth Sahib Ji is read from start to finish, but at one’s own pace, it is referred to as a Sehaj Paath. Pick a script and language, play the audio, and try reading!
    </string>

    <string name="read_edit_text">(1&#8211;1430)</string>

    <string name="search_page_text">
        One of the many amazing qualities of Siri Guru Granth Sahib Ji is that they contain a brilliant but subtle indexing system.\n\nOne can search the Gurbani by using the first *letter* of each *word* in a *sentence* (search by 1st letter, Start). In this manner, it often only takes 2-4 characters to narrow a search across 5894 hymns down to about a dozen or less. Give it a try!
    </string>

    <string name="hukam_page_text">
        For a Sikh, Siri Guru Granth Sahib Ji is not just a manuscript, but the very living embodiment of the Gurus spirit and soul. The wisdom and truth contained in Gurbani is a Sikhs first and foremost guide in life.\n\nOften a Sikh will seek the wisdom of the Guru regarding a personal matter. The process for doing so is called Taking a Hukamnama, wherein, after a small prayer, one will read from Guru Granth Sahib Ji from an arbitrary starting point. However, there is nothing arbitrary about the resulting hymn. A Sikh does not just speak to their Guru, the Guru speaks to the Sikh.
    </string>

    <string name="raag_page_text">
        The hymns in Guru Granth Sahib Ji are not organized by conventional means, rather, they are indexed by a very unique characteristic: music. Almost all of the hymns have been assigned very specific musical scales, and in some cases, a rhythm measure, verse count and other poetic classifications that are all an integral part of the hymn. Thus, the Gurus have placed a huge emphasis on singing as a means of connecting to the hymns.\n\nThe musical measure is called a raag (or raga), and is a huge component of Gurmat Sangeet, the musical tradition started by the Sikh Gurus. The concept of a raag is very complex, but put simply, it is a system wherein a musical scale is defined, along with a set of rules for the notes in the scale that result in a sound that carries a distinct set of emotions. Raags can be used to evoke feelings, moods, even entire experiences.\n\nThe Guru used raags to convey the intended emotions of the hymns to allow the reader to further connect to their underlying message. The raags above can all be found in Guru Granth Sahib Ji and are very special because they are a part of Gurbani itself.
    </string>

    <string name="display_options_gurbani">ਲੋਗੁਜਾਨੈਇਹੁਗੀਤੁਹੈਇਹੁਤਉਬ੍ਰਹਮਬੀਚਾਰ॥</string>

    <string name="headerAngLabel">Ang: </string>
    <string name="headerRaagLabel">Raag/Section: </string>

    <string name="read_button_text">Read</string>
    <string name="search_button_text">Search</string>
    <string name="hukam_button_text">Take a Hukamnama</string>
    <string name="raag_button_text">Explore Raags</string>
    <string name="ok_button_text">Got it!</string>
    <string name="welcome_dialog_title">Welcome!</string>

</resources>
