<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.irvanjit.discovergurbani.ShabadActivity">
    <ListView
            android:id="@+id/shabadview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@android:color/transparent"
            android:dividerHeight="2sp"/>
    <LinearLayout android:id="@+id/display_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:background="@color/background_floating_material_dark"
        android:gravity="center_horizontal">
        <LinearLayout android:id="@+id/display_options_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical|center_horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1.00001"
                android:gravity="center_vertical|center_horizontal">
                <LinearLayout android:id="@+id/gurmukhiSwitchWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical|center_horizontal">
                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/gurmukhiSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textOff="Off"
                        android:textOn="On"
                        android:onClick="toggleText"
                        android:minWidth="40dp" />
                </LinearLayout>
                <View android:id="@+id/gurmukhiDivider"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.00001"
                    android:background="@color/ripple_material_dark" />
                <LinearLayout android:id="@+id/gurmukhiFontToggles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical|center_horizontal"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">
                    <android.support.v7.widget.AppCompatButton android:id="@+id/decreaseGurmukhiSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="toggleGurmukhiSize"
                        android:text="@string/decreaseFontSizeLabel"
                        android:textSize="20sp"
                        android:minWidth="60dp" />
                    <TextView android:id="@+id/gurmukhiFontLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gurmukhiToggleLabel"
                        android:textSize="23sp"
                        android:paddingLeft="7dp"
                        android:paddingRight="7dp" />
                    <android.support.v7.widget.AppCompatButton android:id="@+id/increaseGurmukhiSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="toggleGurmukhiSize"
                        android:text="@string/increaseFontSizeLabel"
                        android:textSize="20sp"
                        android:minWidth="60dp" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1.00001"
                android:gravity="center_vertical|center_horizontal">
                <LinearLayout android:id="@+id/transliterationSwitchWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical|center_horizontal">
                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/transliterationSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textOff="Off"
                        android:textOn="On"
                        android:onClick="toggleText"
                        android:minWidth="40dp" />
                </LinearLayout>
                <View android:id="@+id/transliterationDivider"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.00001"
                    android:background="@color/ripple_material_dark" />
                <LinearLayout android:id="@+id/transliterationFontToggles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical|center_horizontal"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">
                    <Button android:id="@+id/decreaseTransliterationSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="toggleTransliterationSize"
                        android:text="@string/decreaseFontSizeLabel"
                        android:textSize="20sp"
                        android:minWidth="60dp" />
                    <TextView android:id="@+id/transliterationFontLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/transliterationToggleLabel"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:paddingLeft="7dp"
                        android:paddingRight="7dp" />
                    <Button android:id="@+id/increaseTransliterationSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="toggleTransliterationSize"
                        android:text="@string/increaseFontSizeLabel"
                        android:textSize="20sp"
                        android:minWidth="60dp" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1.00001"
                android:gravity="center_vertical|center_horizontal">
                <LinearLayout android:id="@+id/visibilityToggles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical|center_horizontal">
                    <android.support.v7.widget.SwitchCompat android:id="@+id/translationSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textOff="Off"
                        android:textOn="On"
                        android:onClick="toggleText"
                        android:minWidth="40dp" />
                </LinearLayout>
                <View android:id="@+id/translationDivider"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.00001"
                    android:background="@color/ripple_material_dark" />
                <LinearLayout android:id="@+id/fontSizeToggles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical|center_horizontal"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">
                    <Button android:id="@+id/decreaseTranslationSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="toggleTranslationSize"
                        android:text="@string/decreaseFontSizeLabel"
                        android:textSize="20sp"
                        android:minWidth="60dp" />
                    <TextView android:id="@+id/translationFontLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/translationToggleLabel"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp" />
                    <Button android:id="@+id/increaseTranslationSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="toggleTranslationSize"
                        android:text="@string/increaseFontSizeLabel"
                        android:textSize="20sp"
                        android:minWidth="60dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <TextView android:id="@+id/dpoBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/display_options_gurbani"
            android:textColor="@color/gurbani_basanti"
            android:textSize="20sp"
            android:background="@color/ripple_material_dark"
            android:gravity="center_vertical|center_horizontal">
        </TextView>
    </LinearLayout>
</RelativeLayout>
